# admin-vk

./: .gitignore  Cargo.toml
src/: main.rs
src/admin/: mod.rs  sender.rs  types.rs
src/config/: admin.rs  mod.rs  vk.rs
src/db/: mod.rs  sources.rs  types.rs
src/model/: news.rs
src/sentence_decetcor/: detector.rs
src/vk/: reader.rs  types.rs
