[package]
name = "vk-admin-sender"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
dotenv = "0.15.0"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = {version = "0.12.22", features = ["json"]}
rust-stemmers = "1.2.0"
serde = {version = "1.0.219", features = ["derive"]}
tokio = {version="1.47.0", features=["full"]}
